# magenta

./: README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
magenta/: version.py
magenta/common/: __init__.py  nade.py  tf_utils.py
magenta/contrib/: rnn.py  rnn_test.py  seq2seq.py  seq2seq_test.py  training.py
magenta/models/arbitrary_image_stylization/: arbitrary_image_stylization_convert_tflite.py
magenta/models/coconet/: coconet_evaluate.py  coconet_train.py  lib_graph.py  lib_hparams.py  lib_logging.py  lib_mask.py  lib_saved_model.py  lib_tfsampling.py  lib_tfutil.py  lib_util.py
magenta/models/drums_rnn/: __init__.py
magenta/models/gansynth/: gansynth_train.py
magenta/models/gansynth/configs/: mel_prog_hires.py
magenta/models/gansynth/lib/: data_helpers.py  datasets.py  flags.py  layers.py  network_functions.py  networks.py  specgrams_helper.py  spectral_ops.py  train_util.py
magenta/models/image_stylization/: image_stylization_create_dataset.py  image_utils.py  imagenet_data.py  learning.py
magenta/models/improv_rnn/: __init__.py  improv_rnn_generate.py
magenta/models/latent_transfer/: interpolate_joint.py  model_dataspace.py  model_joint.py  sample_dataspace.py  train_joint.py
magenta/models/melody_rnn/: __init__.py
magenta/models/music_vae/: base_model.py  data_hierarchical_test.py  data_test.py  lstm_models.py  lstm_utils.py  music_vae_generate.py
magenta/models/nsynth/: reader.py  utils.py
magenta/models/nsynth/wavenet/: fastgen_test.py  masked.py
magenta/models/onsets_frames_transcription/: __init__.py  audio_label_data_utils.py  audio_label_data_utils_test.py  audio_transform.py  configs.py  constants.py  data.py  estimator_spec_util.py  infer_util.py  infer_util_test.py  metrics.py  model.py  model_tpu.py  onsets_frames_transcription_create_dataset.py  onsets_frames_transcription_create_dataset_maps.py  onsets_frames_transcription_infer.py  onsets_frames_transcription_spectrogram_json.py  onsets_frames_transcription_train.py  onsets_frames_transcription_transcribe.py
magenta/models/onsets_frames_transcription/realtime/: audio_recorder.py  onsets_frames_transcription_realtime.py  tflite_model.py
magenta/models/performance_rnn/: __init__.py  performance_sequence_generator.py
magenta/models/piano_genie/: configs.py  gold.py  loader.py  model.py  util.py
magenta/models/pianoroll_rnn_nade/: __init__.py  pianoroll_rnn_nade_create_dataset.py  pianoroll_rnn_nade_create_dataset_test.py  pianoroll_rnn_nade_generate.py  pianoroll_rnn_nade_graph.py  pianoroll_rnn_nade_train.py
magenta/models/polyphony_rnn/: __init__.py  polyphony_encoder_decoder.py  polyphony_lib.py
magenta/models/rl_tuner/: rl_tuner.py  rl_tuner_ops.py
magenta/models/score2perf/: modalities.py  music_encoders.py  score2perf.py  score2perf_hparams.py
magenta/models/shared/: events_rnn_graph.py
magenta/models/sketch_rnn/: model.py  sketch_rnn_train.py  utils.py
magenta/models/svg_vae/: glyphazzn.py  image_vae.py  svg_decoder.py  svg_decoder_loss.py
magenta/pipelines/: dag_pipeline.py  pipeline.py
magenta/scripts/: abc_compare.py  convert_dir_to_note_sequences.py  unpack_bundle.py
magenta/video/next_frame_prediction_pix2pix/: join_pairs.py
magenta/video/tools/: convert2jpg.py  extract_frames.py  random_pick.py
